--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,16 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "~shared": ["src/shared"],
+      "~screens/*": ["screens/*"],
+      "~components": ["src/components"],
+      "~components/*": ["src/components/*"]
+    }
+  },
+  "target": "esnext",
+  "include": ["**/*.ts", "**/*.tsx", "src"],
+  "exclude": ["node_modules", "cypress"]
 }
