--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "@types/react-query": "^1.2.9",
+    "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
@@ -24,6 +26,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
+    "react-query": "^3.17.1",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
