--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
       "~components": ["src/components"],
       "~components/*": ["src/components/*"],
       "~types": ["src/types"],
-      "~types/*": ["src/types/*"]
+      "~types/*": ["src/types/*"],
+      "~hooks": ["src/hooks"],
+      "~hooks/*": ["src/hooks/*"]
     }
   },
   "target": "esnext",
