--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "~shared": ["src/shared"],
       "~screens": ["screens"],
+      "~context": ["context"],
       "~screens/*": ["screens/*"],
       "~components": ["src/components"],
       "~components/*": ["src/components/*"],
