added jest and @testing-library, mock navigator

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,6 +4,7 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
+      "~root/*": ["./*"],
       "~shared": ["src/shared"],
       "~screens": ["screens"],
       "~context": ["context"],
